--- a/style.css
+++ b/style.css
@@ -367,6 +367,8 @@ a {
 
     .cart li {
         width: 100%;
+        width: 85%;
+        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     }
 
     .cart li img {
