--- a/mobile.css
+++ b/mobile.css
@@ -50,17 +50,24 @@
         width: 100%;
     }
     .left--big--img {
-        width: 75%;
+        width: 83%;
     }
     .left--small--img {
-        width: 20%;
-        padding: 5px 23px 0 0;
+        width: 17%;
+        padding: 5px 9px 0 0;
     }
     .detail--similar div {
         width: 32.333%;
     }
     .btn {
         width: 100%;
+    }
+    .buy {
+        background: #fff;
+        color: orangered;
+    }
+    .buy a {
+        color: orangered;
     }
 }
 
