--- a/mobile.css
+++ b/mobile.css
@@ -32,6 +32,7 @@
     .cart {
         width: 100%;
         margin-bottom: 40px;
+        padding-bottom: 50px;
     }
     .modal {
         display: block;
