--- a/style.css
+++ b/style.css
@@ -179,6 +179,7 @@ label {
     margin-bottom: 10px;
     border-radius: 3px;
     cursor: pointer;
+    opacity: 0.7;
 }
 .btn:hover {
     opacity: 0.9;
@@ -224,13 +225,13 @@ label {
     font-size: 20px;
     font-weight: 500;
     letter-spacing: 2px;
-    padding-bottom: 10px;
-    background-color: blue;
+    padding: 5px 0;
+    background-color: orangered;
     color: #fff;
     width: 70%;
     margin: 0 auto;
     border-radius: 25px 25px 25px 25px;
-    line-height: auto;
+    opacity: .7;
 }
 .cart--price {
     font-size: 25px;
@@ -256,8 +257,8 @@ label {
     width: 100%;
     z-index: 1;
     padding: 5px 0;
-    background: rgba(255, 99, 71, 0.8);
-    opacity: 0.8;
+    background: orangered;
+    opacity: 0.7;
 }
 
 .cart:hover .modal  {
@@ -270,7 +271,7 @@ label {
     font-size: 22px;
 }
 .buy a:hover {
-    color: orangered;
+    color: blue;
 }
 /* slides Img */
 
