--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ a {
 .flex {
     display: flex;
     justify-content: space-around;
-    gap: 2em;
+    gap: 1em;
 }
 
 /* nav Css */
@@ -36,13 +36,14 @@ a {
 .nav-list, .logo, .icon{
     color: #111;
     padding: 12px 24px;
-    font-weight: 600;
-    font-size: 1.3em;
+    font-weight: 500;
+    font-size: 1em;
     opacity: .8;
     justify-content: space-between;
 }
 .nav-list li a {
     line-height: 35px;
+    color: #000;
 }
 .icon {
     display: none;
@@ -56,9 +57,9 @@ a {
 
 /* store */
 .store {
+    position: relative;
     display: block;
     line-height: 60px;
-    color: #eee;
 }
 .fa-store sup {
     position: absolute;
@@ -67,8 +68,7 @@ a {
     display: inline-block;
     background-color: orangered;
     border-radius: 50%;
-    top: 12px;
-    right: 88px;
+    top: 10px;
     line-height: 20px;
     text-align: center;
     color: #fff;
@@ -82,8 +82,61 @@ a {
 .subDetail {
     background-color: #1111;
     padding: 20px 0;
-    text-indent: 207px;
+    text-align: center;
 }
+
+/* Cat */
+.cat--container {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+}
+.cat {
+    width: 32.333%;
+    position: relative;
+}
+
+.cat:hover .cat--content p{
+    opacity: 1;
+}
+
+.cat img {
+    width: 100%;
+    display: block;
+    border-radius: 2px;
+}
+
+.cat--content {
+    position: absolute;
+    padding: 10px;
+    bottom: 0;
+    background: rgb(0, 0, 0); /* Fallback color */
+    background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
+    color: #f1f1f1;
+}
+
+.cat--content h2 {
+    color: #fff;
+}
+
+.cat--content p {
+    opacity: .6;
+}
+.cat--content a {
+    color: #fff;
+    padding: 10px 24px;
+    display: inline-block;
+    background-color: orangered;
+    border-radius: 2px;
+    opacity: 0.8;
+}
+.cat--content a:hover {
+    opacity: 1;
+}
+/* end cat */
+
+
 /* Detail */
 .detail--container::after {
   content: '';
@@ -192,7 +245,7 @@ label {
 /* end */
 .cart--container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-wrap: wrap;
 }
 
@@ -203,7 +256,7 @@ label {
     cursor: pointer;
     height: auto;
     text-align: center;
-    padding: 0px 0px 40px 0px;
+    padding: 20px 0px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
@@ -252,26 +305,28 @@ label {
 }
 
 .modal {
-    display: none;
+    display: block;
     position: absolute;
     width: 100%;
+    height: 12%;
+    bottom: 0;
     z-index: 1;
-    padding: 5px 0;
-    background: orangered;
     opacity: 0.7;
+    transition: 0.5s;
 }
 
-.cart:hover .modal  {
-    display: block;
+.cart:hover .modal {
+    background: rgba(255,77,1,0.9);
 }
 .buy a {
     display: inline-block;
-    padding: 0 20px;
+    padding: 12px 20px;
     color: #fff;
+    opacity: 0.7;
     font-size: 22px;
 }
 .buy a:hover {
-    color: blue;
+    color: #000;
 }
 /* slides Img */
 
